k8s/base/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-module
  namespace: polyglot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-module
  template:
    metadata:
      labels:
        app: go-module
    spec:
      containers:
      - name: go-module
        image: vishnumohan9447/poly-glot-go-module 
        imagePullPolicy: Always 
        ports:
        - containerPort: 8081
