k8s/base/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-module
  namespace: polyglot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-module
  template:
    metadata:
      labels:
        app: nodejs-module
    spec:
      containers:
      - name: nodejs-module
        image: vishnumohan9447/poly-glot-nodejs-module:latest 
        imagePullPolicy: Always 
        ports:
        - containerPort: 3000
